--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
   <body>
     <div app class='container'>
       <div id='chart_div'></div>
+
+      <div class='preview panel panel-default' ng-show='selected'>
+        <div class='panel-body'>
+          <pre>{{ selected.message }}</pre>
+          <pre ng-show='selected.error'>{{ selected.error | json }}</pre>
+          <a class='btn btn-primary' ng-href='https://github.com/masneyb/boot2sol/commit/{{ selected.sha }}' target='_blank'>view commit</a>
+        </div>
+      </div>
       <table class='table table-bordered'>
         <tbody ng-repeat='commit in data.commits'>
           <tr>
@@ -48,7 +56,7 @@
                 angular.forEach(m.data.commits, function(commit, index) {
                   data.addRow([
                   index,
-                  '' + commit.size + ': ' + commit.message,
+                  '' + commit.size + 'b \n ' + commit.message,
                   commit.size,
                   512,
                   ]);
@@ -84,13 +92,13 @@
                     function selectHandler() {
                       var selectedItem = chart.getSelection()[0];
                       if (selectedItem) {
-                        var value = data.getValue(selectedItem.row, selectedItem.column);
-                        alert('The user selected ' + value);
+                        var index = data.getValue(selectedItem.row, 0);
+
+                        $scope.selected = m.data.commits[index];
+                        $scope.$apply();
                       }
                     }
 
-                    // Listen for the 'select' event, and call my function selectHandler() when
-                    // the user selects something on the chart.
                     google.visualization.events.addListener(chart, 'select', selectHandler);
 
 
