--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     title: 'Time'
                     },
                     vAxis: {
-                      title: 'Popularity'
+                      title: 'Bytes'
                       },
 
                       crosshair: {
